--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.5.1",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "lodash": "^4.17.21",
     "react-helmet": "^6.1.0",
     "umi": "^4.0.87"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "typescript": "^5.0.3"
